DE-12392 Public Share
fraud scenarios and error handling

--- a/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
@@ -1952,13 +1952,19 @@
 "account_can_not_change_password" = "لا يمكنك إعادة تعيين كلمة المرور الخاصة بك بسبب نقص المعلومات في حسابك";
 "signup_enter_verification_code_email" = "الرجاء إدخال رمز الأمان المكون من 6 أرقام الذي أرسلناه إلى عنوان البريد الإلكتروني هذا: %@";
 "grace_banner_text" = "نود أن نذكرك بأنه لا يمكن تجديد حزمة lifeebox الخاصة بك لأنه لا يمكن استلام دفعة بطاقة الائتمان. للاستمرار في تلقي خدمة lifebox دون انقطاع ، تحقق من معلومات الدفع الخاصة بك من خلال AppStore وقم بتحديثها إذا لزم الأمر.";
-"save_to_my_lifebox_success" = "";
-"save_to_my_lifebox_error" = "";
-"save_to_my_lifebox_multiprocess" = "";
-"save_to_my_lifebox_same_account" = "";
-"save_to_my_lifebox_file_not_found" = "";
-"save_to_my_lifebox_folder_not_found" = "";
-"grace_banner_title" = "";
-"grace_banner_desc" = "";
-"grace_expire_date" = "";
-"signup_enter_verification_code_email" = "";
+"save_to_my_lifebox_success" = "بدأت الملفات في الحفظ في حسابك ، يمكنك عرضها في قائمة \"كل الملفات\" قريبًا.";
+"save_to_my_lifebox_error" = "فشل في حفظ الملفات إلى الحساب. يرجى المحاولة مرة أخرى في وقت لاحق.";
+"save_to_my_lifebox_multiprocess" = "لديك صفقة مستمرة. يرجى المحاولة مرة أخرى في وقت لاحق.";
+"save_to_my_lifebox_same_account" = "تم بالفعل حفظ الملفات في حسابك. يمكنك عرضه ضمن قائمة \"جميع الملفات\".";
+"save_to_my_lifebox_file_not_found" = "الملف غير موجود في المشاركة. في حالة انتهاء صلاحية المشاركة أو حذفها ، يمكنك الاتصال بمالك المشاركة.";
+"save_to_my_lifebox_folder_not_found" = "لا توجد ملفات في هذا المجلد.";
+"grace_banner_title" = "فشل عملية الدفع!";
+"grace_banner_desc" = "قد يكون رصيد بطاقة الخصم / الائتمان الخاصة بك غير كافٍ أو قد تكون معلومات بطاقتك قد تغيرت.";
+"grace_expire_date" = "تاريخ تعليق الحساب:";
+"save_to_my_lifebox_not_found_placeholder" = "لم يتم العثور على الملف.";
+"signup_too_many_requests_email" = "";
+"signup_too_many_requests_msisdn" = "";
+"signup_email_verification_title" = "";
+"signup_email_verification_subtitle" = "";
+"signup_phone_verification_title" = "";
+"signup_phone_verification_subtitle" = "";
