--- a/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
@@ -1940,13 +1940,19 @@
 "account_can_not_change_password" = "Sie können Ihr Passwort aufgrund fehlender Informationen in Ihrem Konto nicht zurücksetzen";
 "signup_enter_verification_code_email" = "Bitte geben Sie den 6-stelligen Sicherheitscode ein, den wir an diese E-Mail-Adresse gesendet haben: %@";
 "grace_banner_text" = "Wir möchten Sie daran erinnern, dass Ihr lifebox-paket nicht verlängert werden kann, da die Kreditkartenzahlung nicht empfangen werden konnte. Um weiterhin einen ununterbrochenen lifebox-dienst zu erhalten, überprüfen Sie Ihre Zahlungsinformationen über den AppStore und aktualisieren Sie sie bei Bedarf.";
-"save_to_my_lifebox_success" = "";
-"save_to_my_lifebox_error" = "";
-"save_to_my_lifebox_multiprocess" = "";
-"save_to_my_lifebox_same_account" = "";
-"save_to_my_lifebox_file_not_found" = "";
-"save_to_my_lifebox_folder_not_found" = "";
-"grace_banner_title" = "";
-"grace_banner_desc" = "";
-"grace_expire_date" = "";
-"signup_enter_verification_code_email" = "";
+"save_to_my_lifebox_success" = "Die Dateien wurden in Ihrem Konto gespeichert, Sie können sie in Kürze unter dem Menü „Alle Dateien“ abrufen.";
+"save_to_my_lifebox_error" = "Die Dateien konnten nicht im Konto gespeichert werden. Bitte versuchen Sie es später erneut.";
+"save_to_my_lifebox_multiprocess" = "Sie haben einen laufenden Vorgang. Bitte versuchen Sie es später erneut.";
+"save_to_my_lifebox_same_account" = "Die Dateien sind bereits in Ihrem Konto gespeichert. Sie können sie unter dem Menü „Alle Dateien“ anzeigen.";
+"save_to_my_lifebox_file_not_found" = "Die Datei wurde in der Freigabe nicht gefunden. Falls die Freigabe abgelaufen ist oder gelöscht wurde, können Sie sich an den Eigentümer der Freigabe wenden.";
+"save_to_my_lifebox_folder_not_found" = "Der Ordner enthält keine Dateien.";
+"grace_banner_title" = "Bezahlung fehlgeschlagen!";
+"grace_banner_desc" = "Ihr Debit-/Kreditkartenguthaben ist möglicherweise nicht ausreichend oder Ihre Karteninformationen haben sich möglicherweise geändert.";
+"grace_expire_date" = "Datum der Kontosperrung:";
+"save_to_my_lifebox_not_found_placeholder" = "Datei nicht gefunden.";
+"signup_too_many_requests_email" = "";
+"signup_too_many_requests_msisdn" = "";
+"signup_email_verification_title" = "";
+"signup_email_verification_subtitle" = "";
+"signup_phone_verification_title" = "";
+"signup_phone_verification_subtitle" = "";
