--- a/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
@@ -1982,13 +1982,19 @@
 "account_can_not_change_password" = "No puedes cambiar tu contraseña por falta de información";
 "signup_enter_verification_code_email" = "Ingrese el código de seguridad de 6 dígitos que le enviamos a esta dirección de correo electrónico: %@";
 "grace_banner_text" = "Le recordamos que su paquete lifebox no se puede renovar porque no se pudo recibir el pago de la tarjeta de crédito. Para continuar recibiendo el servicio lifebox ininterrumpido, verifique su información de pago a través de la AppStore y actualícela si es necesario.";
-"save_to_my_lifebox_success" = "";
-"save_to_my_lifebox_error" = "";
-"save_to_my_lifebox_multiprocess" = "";
-"save_to_my_lifebox_same_account" = "";
-"save_to_my_lifebox_file_not_found" = "";
-"save_to_my_lifebox_folder_not_found" = "";
-"grace_banner_title" = "";
-"grace_banner_desc" = "";
-"grace_expire_date" = "";
-"signup_enter_verification_code_email" = "";
+"save_to_my_lifebox_success" = "Los archivos han comenzado a guardarse en su cuenta, puede verlos en el menú \"Todos Los Archivos\" después de un rato.";
+"save_to_my_lifebox_error" = "Los archivos no se pudieron guardar en su cuenta. Inténtelo de nuevo más tarde.";
+"save_to_my_lifebox_multiprocess" = "Tienes un proceso en curso. Inténtelo de nuevo más tarde.";
+"save_to_my_lifebox_same_account" = "Los archivos ya están registrados en su cuenta. Puede verlos en el menú \"Todos Los Archivos\".";
+"save_to_my_lifebox_file_not_found" = "No se encontraron archivos en el recurso compartido. Puede ponerse en contacto con el propietario del recurso compartido en caso de que el recurso compartido caduque o se elimine.";
+"save_to_my_lifebox_folder_not_found" = "No hay archivos en la carpeta.";
+"grace_banner_title" = "¡No se pudo recibir el pago!";
+"grace_banner_desc" = "El saldo de su tarjeta de Débito/Crédito puede ser insuficiente o la información de su tarjeta puede haber cambiado.";
+"grace_expire_date" = "Fecha de suspensión de la cuenta:";
+"save_to_my_lifebox_not_found_placeholder" = "Archivo no encontrado.";
+"signup_too_many_requests_email" = "";
+"signup_too_many_requests_msisdn" = "";
+"signup_email_verification_title" = "";
+"signup_email_verification_subtitle" = "";
+"signup_phone_verification_title" = "";
+"signup_phone_verification_subtitle" = "";
