--- a/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
@@ -1940,13 +1940,19 @@
 "account_can_not_change_password" = "Nu vă puteți reseta parola din cauza lipsei de informații din contul dvs.";
 "signup_enter_verification_code_email" = "Vă rugăm să introduceți codul de securitate din 6 cifre pe care l-am trimis la această adresă de e-mail: %@";
 "grace_banner_text" = "Dorim să vă reamintim că pachetul dumneavoastră lifebox nu poate fi reînnoit deoarece plata cu cardul de credit nu a putut fi primită. Pentru a continua să primiți serviciul lifebox neîntrerupt, verificați informațiile de plată prin AppStore și actualizați-le dacă este necesar.";
-"save_to_my_lifebox_success" = "";
-"save_to_my_lifebox_error" = "";
-"save_to_my_lifebox_multiprocess" = "";
-"save_to_my_lifebox_same_account" = "";
-"save_to_my_lifebox_file_not_found" = "";
-"save_to_my_lifebox_folder_not_found" = "";
-"grace_banner_title" = "";
-"grace_banner_desc" = "";
-"grace_expire_date" = "";
-"signup_enter_verification_code_email" = "";
+"save_to_my_lifebox_success" = "Fișierele au început să fie salvate în contul tău,  în scurt timp le puteți vizualiza în meniul „Toate Fișierele”.";
+"save_to_my_lifebox_error" = "Fișierele nu au putut fi salvate în contul tău. Te rugăm să încerci din nou mai târziu.";
+"save_to_my_lifebox_multiprocess" = "Ai o tranzacție în curs de desfășurare . Te rugăm să încerci din nou mai târziu.";
+"save_to_my_lifebox_same_account" = "Fișierele sunt deja salvate în contul tău. Le poți vizualiza în meniul „Toate Fișierele”.";
+"save_to_my_lifebox_file_not_found" = "Nu a fost găsit fișier în partajare. În cazul în care termenul partajării expiră sau partajarea este ștearsă, puteți contacta titularul partajării.";
+"save_to_my_lifebox_folder_not_found" = "Nu există fișier în folder.";
+"grace_banner_title" = "Plata nu a putut fi Procesată!";
+"grace_banner_desc" = "Este posibil ca soldul cardului dvs. de Debit/Credit să fie insuficient sau este posibil ca datele cardului dvs. să se fi modificat.";
+"grace_expire_date" = "Data Suspendării Contului:";
+"save_to_my_lifebox_not_found_placeholder" = "Fișierul nu a fost găsit.";
+"signup_too_many_requests_email" = "";
+"signup_too_many_requests_msisdn" = "";
+"signup_email_verification_title" = "";
+"signup_email_verification_subtitle" = "";
+"signup_phone_verification_title" = "";
+"signup_phone_verification_subtitle" = "";
