--- a/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
@@ -1954,13 +1954,19 @@
 "account_can_not_change_password" = "Вы не можете изменить пароль из-за отсутствия информации в вашей учетной записи";
 "signup_enter_verification_code_email" = "Пожалуйста, введите 6-значный код безопасности, который мы отправили на этот адрес электронной почты: %@";
 "grace_banner_text" = "Напоминаем, что ваш пакет lifebox не может быть продлен, так как не удалось получить оплату с кредитной карты. Чтобы и дальше получать бесперебойное обслуживание lifebox, проверьте свою платежную информацию через AppStore и обновите ее, если это необходимо.";
-"save_to_my_lifebox_success" = "";
-"save_to_my_lifebox_error" = "";
-"save_to_my_lifebox_multiprocess" = "";
-"save_to_my_lifebox_same_account" = "";
-"save_to_my_lifebox_file_not_found" = "";
-"save_to_my_lifebox_folder_not_found" = "";
-"grace_banner_title" = "";
-"grace_banner_desc" = "";
-"grace_expire_date" = "";
-"signup_enter_verification_code_email" = "";
+"save_to_my_lifebox_success" = "Начат процесс сохранения файлов в вашу учетную запись, вскоре вы сможете просмотреть их в меню «Все Файлы».";
+"save_to_my_lifebox_error" = "Не удалось сохранить файлы в вашей учетной записи. Пожалуйста, повторите попытку позже.";
+"save_to_my_lifebox_multiprocess" = "У вас есть текущая транзакция. Пожалуйста, повторите попытку позже.";
+"save_to_my_lifebox_same_account" = "Резервные копии файлов уже сохранены в вашей учетной записи. Вы можете просмотреть их в меню «Все Файлы».";
+"save_to_my_lifebox_file_not_found" = "Файлы не найдены в ссылке для обмена. Пожалуйста, свяжитесь с владельцем обмена в случае истечения срока действия или удаления ссылки.";
+"save_to_my_lifebox_folder_not_found" = "Нет файлов в папке.";
+"grace_banner_title" = "Платеж не Прошел!";
+"grace_banner_desc" = "Баланс вашей Дебетовой/Кредитной карты может быть недостаточным или данные вашей карты могут быть изменены.";
+"grace_expire_date" = "Дата Приостановки Действия Учетной Записи:";
+"save_to_my_lifebox_not_found_placeholder" = "Файл не найден.";
+"signup_too_many_requests_email" = "";
+"signup_too_many_requests_msisdn" = "";
+"signup_email_verification_title" = "";
+"signup_email_verification_subtitle" = "";
+"signup_phone_verification_title" = "";
+"signup_phone_verification_subtitle" = "";
