--- a/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
@@ -1983,13 +1983,19 @@
 "account_can_not_change_password" = "Për shkak të mungesës e të dhënave në llogarinë tuaj , ju nuk mund të rinovoni fjalëkalimin tuaj";
 "signup_enter_verification_code_email" = "Ju lutemi shkruani kodin 6 shifror të sigurisë që kemi dërguar në këtë adresë emaili: %@";
 "grace_banner_text" = "Dëshirojmë t'ju kujtojmë se paketa juaj lifebox nuk mund të rinovohet sepse pagesa me kartë krediti nuk mund të merrej. Për të vazhduar të merrni shërbimin e pandërprerë të lifebox, kontrolloni informacionin tuaj të pagesës përmes AppStore dhe përditësoni nëse është e nevojshme.";
-"save_to_my_lifebox_success" = "";
-"save_to_my_lifebox_error" = "";
-"save_to_my_lifebox_multiprocess" = "";
-"save_to_my_lifebox_same_account" = "";
-"save_to_my_lifebox_file_not_found" = "";
-"save_to_my_lifebox_folder_not_found" = "";
-"grace_banner_title" = "";
-"grace_banner_desc" = "";
-"grace_expire_date" = "";
-"signup_enter_verification_code_email" = "";
+"save_to_my_lifebox_success" = "Skedarët filluan të regjistrohen në llogarinë tuaj, mund t'i shikoni së shpejti në menynë \"Të gjithë skedarët\".";
+"save_to_my_lifebox_error" = "Skedarët në llogarinë tuaj nuk janë regjistruar. Ju lutemi provoni përsëri më vonë.";
+"save_to_my_lifebox_multiprocess" = "Ju keni një transaksion të vazhdueshëm. Ju lutemi provoni përsëri më vonë.";
+"save_to_my_lifebox_same_account" = "Skedarët janë regjistruar tashmë në llogarinë tuaj.Mund ta shikoni nën menynë \"Të gjithë skedarët\".";
+"save_to_my_lifebox_file_not_found" = "Nuk u gjet skedarë në shpërndarje. Në rast se koha e shpërndarjes skadon ose nëse fshihet, mund të kontaktoni me të zotin e shpërndarjes.";
+"save_to_my_lifebox_folder_not_found" = "Nuk ka skedarë në dosje.";
+"grace_banner_title" = "Pagesa  nuk është marrë!";
+"grace_banner_desc" = "Bilanci i kartës suaj të Debitit/Kreditit mund të jetë i pamjaftueshëm ose informacioni i kartës tuaj mund të ketë ndryshuar.";
+"grace_expire_date" = "Data e pezullimit të llogarisë:";
+"save_to_my_lifebox_not_found_placeholder" = "Skedari nuk u gjet.";
+"signup_too_many_requests_email" = "";
+"signup_too_many_requests_msisdn" = "";
+"signup_email_verification_title" = "";
+"signup_email_verification_subtitle" = "";
+"signup_phone_verification_title" = "";
+"signup_phone_verification_subtitle" = "";
