--- a/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
@@ -1942,13 +1942,19 @@
 "account_can_not_change_password" = "Ви не можете змінити пароль через відсутність інформації у вашому обліковому записі";
 "signup_enter_verification_code_email" = "Будь ласка, введіть 6-значний код безпеки, який ми надіслали на цю адресу електронної пошти: %@";
 "grace_banner_text" = "Нагадуємо, що ваш пакет lifebox не може бути продовжений, тому що не вдалося отримати оплату з кредитної картки. Щоб і надалі отримувати безперебійне обслуговування lifebox, перевірте свою платіжну інформацію через AppStore та оновіть її, якщо це необхідно.";
-"save_to_my_lifebox_success" = "";
-"save_to_my_lifebox_error" = "";
-"save_to_my_lifebox_multiprocess" = "";
-"save_to_my_lifebox_same_account" = "";
-"save_to_my_lifebox_file_not_found" = "";
-"save_to_my_lifebox_folder_not_found" = "";
-"grace_banner_title" = "";
-"grace_banner_desc" = "";
-"grace_expire_date" = "";
-"signup_enter_verification_code_email" = "";
+"save_to_my_lifebox_success" = "Розпочато процес збереження файлів у ваш обліковий запис, незабаром ви зможете переглянути їх у меню «Усі Файли».";
+"save_to_my_lifebox_error" = "Не вдалося зберегти файли у вашому обліковому записі. Будь-ласка спробуйте пізніше.";
+"save_to_my_lifebox_multiprocess" = "Ви маєте поточну транзакцію. Будь-ласка спробуйте пізніше.";
+"save_to_my_lifebox_same_account" = "Резервні копії файлів вже збережені у вашому обліковому записі. Ви можете переглянути їх у меню «Усі Файли».";
+"save_to_my_lifebox_file_not_found" = "Файли не знайдено за посиланням для спільного доступу. Будь ласка, зв’яжіться з власником спільного доступу у разі закінчення терміну дії посилання або його видалення.";
+"save_to_my_lifebox_folder_not_found" = "Немає файлів у папці.";
+"grace_banner_title" = "Помилка Оплати!";
+"grace_banner_desc" = "Баланс вашої Дебетової/Кредитної картки може бути недостатнім або дані вашої картки змінилися.";
+"grace_expire_date" = "Дата Призупинення Облікового Запису:";
+"save_to_my_lifebox_not_found_placeholder" = "Файл не знайдено.";
+"signup_too_many_requests_email" = "";
+"signup_too_many_requests_msisdn" = "";
+"signup_email_verification_title" = "";
+"signup_email_verification_subtitle" = "";
+"signup_phone_verification_title" = "";
+"signup_phone_verification_subtitle" = "";
