--- a/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
@@ -2245,13 +2245,19 @@ Please check I have understood the intended command here*/
 "account_can_not_change_password" = "Vous ne pouvez pas réinitialiser votre mot de passe en raison d'un manque d'informations dans votre compte";
 "signup_enter_verification_code_email" = "Veuillez saisir le code de sécurité à 6 chiffres que nous avons envoyé à cette adresse e-mail: %@";
 "grace_banner_text" = "Nous vous rappelons que votre forfait lifebox ne peut pas être renouvelé car le paiement par carte bancaire n'a pas pu être reçu. Pour continuer à bénéficier du service lifebox ininterrompu, vérifiez vos informations de paiement via l'AppStore et mettez-les à jour si nécessaire.";
-"save_to_my_lifebox_success" = "";
-"save_to_my_lifebox_error" = "";
-"save_to_my_lifebox_multiprocess" = "";
-"save_to_my_lifebox_same_account" = "";
-"save_to_my_lifebox_file_not_found" = "";
-"save_to_my_lifebox_folder_not_found" = "";
-"grace_banner_title" = "";
-"grace_banner_desc" = "";
-"grace_expire_date" = "";
-"signup_enter_verification_code_email" = "";
+"save_to_my_lifebox_success" = "Les fichiers ont commencé à être enregistrés sur votre compte, vous pourrez les voir dans le menu \"Tous les fichiers\" sous peu.";
+"save_to_my_lifebox_error" = "Échec de l'enregistrement des fichiers sur le compte. Veuillez réessayer plus tard.";
+"save_to_my_lifebox_multiprocess" = "Vous avez une transaction en cours. Veuillez réessayer plus tard.";
+"save_to_my_lifebox_same_account" = "Les fichiers sont déjà enregistrés dans votre compte. Vous pouvez le voir dans le menu \"Tous les fichiers\".";
+"save_to_my_lifebox_file_not_found" = "Le fichier est introuvable dans le partage. Si le partage expire ou est supprimé, vous pouvez contacter le propriétaire du partage.";
+"save_to_my_lifebox_folder_not_found" = "Il n'y a aucun fichier dans le dossier.";
+"grace_banner_title" = "Paiement échoué!";
+"grace_banner_desc" = "Le solde de la carte de débit/crédit peut être insuffisant ou les informations de votre carte peuvent avoir changé.";
+"grace_expire_date" = "Date de suspension du compte :";
+"save_to_my_lifebox_not_found_placeholder" = "Fichier introuvable.";
+"signup_too_many_requests_email" = "";
+"signup_too_many_requests_msisdn" = "";
+"signup_email_verification_title" = "";
+"signup_email_verification_subtitle" = "";
+"signup_phone_verification_title" = "";
+"signup_phone_verification_subtitle" = "";
