--- a/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
@@ -1961,9 +1961,9 @@
 "save_to_my_lifebox_success" = "Dosyalar hesabına kaydedilmeye başladı, kısa süre sonra “Tüm Dosyalar” menüsünde görüntüleyebilirsin.";
 "save_to_my_lifebox_error" = "Dosyalar hesabına kaydedilemedi. Lütfen daha sonra tekrar dene.";
 "save_to_my_lifebox_multiprocess" = "Devam eden işlemin var. Lütfen daha sonra tekrar dene.";
-"save_to_my_lifebox_same_account" = "Dosyalar zaten hesabında kayıtlı. “Tüm Dosyalar” menüsü altında görüntüleyebilirsin. ";
+"save_to_my_lifebox_same_account" = "Dosyalar zaten hesabında kayıtlı. “Tüm Dosyalar” menüsü altında görüntüleyebilirsin.";
 "save_to_my_lifebox_file_not_found" = "Paylaşımda dosya bulunamadı. Paylaşım süresinin dolması veya silinmesi durumuna karşı paylaşımın sahibiyle iletişime geçebilirsin.";
-"save_to_my_lifebox_folder_not_found" = "Klasörde dosya yok.";
+"save_to_my_lifebox_folder_not_found" = "Klasörde dosya bulunamadı.";
 
 /*Fuzzy*/
 "grace_banner_title" = "Ödeme Alınamadı!";
@@ -1971,3 +1971,10 @@
 
 /*Fuzzy*/
 "grace_expire_date" = "Hesabın Askıya Alınacağı Tarih:";
+"save_to_my_lifebox_not_found_placeholder" = "Dosya bulunamadı.";
+"signup_too_many_requests_email" = "";
+"signup_too_many_requests_msisdn" = "";
+"signup_email_verification_title" = "";
+"signup_email_verification_subtitle" = "";
+"signup_phone_verification_title" = "";
+"signup_phone_verification_subtitle" = "";
