--- a/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
@@ -1993,9 +1993,10 @@
 "grace_banner_desc" = "Bilanci i kartës suaj të Debitit/Kreditit mund të jetë i pamjaftueshëm ose informacioni i kartës tuaj mund të ketë ndryshuar.";
 "grace_expire_date" = "Data e pezullimit të llogarisë:";
 "save_to_my_lifebox_not_found_placeholder" = "Skedari nuk u gjet.";
-"signup_too_many_requests_email" = "";
-"signup_too_many_requests_msisdn" = "";
-"signup_email_verification_title" = "";
-"signup_email_verification_subtitle" = "";
-"signup_phone_verification_title" = "";
-"signup_phone_verification_subtitle" = "";
+"signup_too_many_requests_email" = "Për këtë email janë kërkuar shumë kode verifikimi, ju lutemi provoni sërish më vonë.";
+"signup_too_many_requests_msisdn" = "Për këtë numër telefoni janë kërkuar shumë kode verifikimi, ju lutemi provoni sërish më vonë.";
+"signup_email_verification_title" = "Verifikimi Me Email";
+"signup_email_verification_subtitle" = "Futni Kodin E Sigurisë Së Emailit";
+"signup_phone_verification_title" = "Verifikimi i Telefonit";
+"signup_phone_verification_subtitle" = "Futni Kodin E Sigurisë Së Telefonit";
+"save_to_my_lifebox" = "Ruaje në lifebox";
